@@ -5,5 +5,5 @@
     "author": "Xorimuth",
     "description": "Some simple features to make your life easier whilst using a spidertron:\n - Enter a vehicle without leaving your spidertron\n - Quickly toggle between engineer and spidertron\n - Automatically sort spidertron inventories\n - Pipette remotes from inventory by hovering over spidertrons\n - Directly open the inventory of a vehicle that you are currently driving",
     "factorio_version": "1.1",
-    "dependencies": ["base", "? Spidertron Waypoints >= 1.7.2"]
+    "dependencies": ["base >= 1.1.7", "? Spidertron Waypoints >= 1.7.2"]
   }
